--- a/index.html
+++ b/index.html
@@ -2,22 +2,23 @@
 <html>
 <head>
   <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Leckerli+One" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-  <script src="script.js"></script>
-  <title>Beer Review</title>
+  <title>Brewviewser</title>
 </head>
 <body>
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
       <div class="page-header">
-        <h1>Beer Review</h1>
+        <h1>Brewviewser</h1>
       </div>
 
       <section class="beers">
         <h2>Beers</h2>
         <ul class="beers-list">
-          
+           <li>Hopefully this gets removed</li>
         </ul>
       </section>
 
@@ -36,11 +37,23 @@
             placeholder="Category">
           </input>
         </div>
-        <button class="btn btn-primary post-beer">Post</button>
+        <div class="form-group">
+          <select name="select"
+            class="rating-input form-control">
+            <option value="<i class='fa fa-beer'></i>">1</option>
+            <option value="<i class='fa fa-beer'></i><i class='fa fa-beer'></i>" selected>2</option>
+            <option value="<i class='fa fa-beer'></i><i class='fa fa-beer'></i><i class='fa fa-beer'></i>">3</option>
+            <option value="<i class='fa fa-beer'></i><i class='fa fa-beer'></i><i class='fa fa-beer'></i><i class='fa fa-beer'></i>">4</option>
+            <option value="<i class='fa fa-beer'></i><i class='fa fa-beer'></i><i class='fa fa-beer'></i><i class='fa fa-beer'></i><i class='fa fa-beer'></i>">5</option>
+          </select>
+        </div>
+        <button class="btn btn-primary post-beer" type="button">Post</button>
+
       </form>
-      
+
     </div>
   </div>
 
+  <script src="script.js"></script>
 </body>
 </html>
